--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
+    "express-basic-auth": "^1.2.1",
     "joi": "^17.13.3",
     "sqlite3": "^5.1.7",
     "validator": "^13.15.0"
